mule-user-guide/v/3.2/imap-transport-reference.adoc
= IMAP Transport Reference

== Introduction

The IMAP transport can be used for receiving messages from IMAP inboxes using the `javax.mail` API. The IMAPS Transport uses secure connections over SSL/TLS.

Using the IMAP transport provides a simple way to interact with an IMAP server without having to write your own IMAP client. It allows you to log in to an IMAP server at a specified frequency, pull messages from the server, optionally filter them based on the email subject, and transform them into standard java objects which you can use in your application.

TLS/SSL connections are made on behalf of an entity, which can be anonymous or identified by a certificate. The key store provides the certificates and associated private keys necessary for identifying the entity making the connection. Additionally, connections are made to trusted systems. The public certificates of trusted systems are stored in a trust store, which is used to verify that the connection made to a remote system matches the expected identity.

== Namespace and Syntax

XML namespace:

[source, xml, linenums]
----
xmlns:imap "http://www.mulesoft.org/schema/mule/imap"xmlns:imaps "http://www.mulesoft.org/schema/mule/imaps"
----

XML schema location:

[source, code, linenums]
----
http://www.mulesoft.org/schema/mule/imap http://www.mulesoft.org/schema/mule/imap/3.2/mule-imap.xsdhttp://www.mulesoft.org/schema/mule/imaps http://www.mulesoft.org/schema/mule/imaps/3.2/mule-imaps.xsd
----

Connector syntax:

[source, xml, linenums]
----
<imap:connector name="imapConnector" backupEnabled="true" backupFolder="backup" checkFrequency="90000"                 deleteReadMessages="false" mailboxFolder="INBOX" moveToFolder="PROCESSED"/><imaps:connector name="imapsConnector" backupEnabled="true" backupFolder="backup" checkFrequency="90000"                  deleteReadMessages="false" mailboxFolder="INBOX" moveToFolder="PROCESSED"/>  <imaps:tls-client path="clientKeystore" storePassword="mulepassword" />   <imaps:tls-trust-store path="greenmail-truststore" storePassword="password" /> </imaps:connector>
----

Endpoint syntax:
You can define your endpoints 2 different ways:

. Prefixed endpoint:

[source, xml, linenums]
----
<imap:inbound-endpoint user="bob" password="password" host="localhost" port="65433"/> <imaps:inbound-endpoint user="bob" password="password" host="localhost" port="65433"/>
----

. Non-prefixed URI:

[source, xml, linenums]
----
<inbound-endpoint address="imap://bob:password@localhost:65433"/><inbound-endpoint address="imaps://bob:password@localhost:65433"/>
----

See the sections below for more information.

== Features

* Simple to configure email access on inbound endpoints: including authentication information and check frequency
* Automate the handling of email attachments
* Automatically back up messages to a specified folder
* Automatically delete read messages
* Easy to configure tls security

== Usage

If you want to include the IMAP email transport in your configuration, these are the namespaces you need to define:

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?><mule xmlns="http://www.mulesoft.org/schema/mule/core"       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"       xmlns:spring="http://www.springframework.org/schema/beans"       xmlns:imap="http://www.mulesoft.org/schema/mule/imap"       xsi:schemaLocation="       http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-3.0.xsd       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/3.2/mule.xsd       http://www.mulesoft.org/schema/mule/imap http://www.mulesoft.org/schema/mule/imap/3.2/mule-imap.xsd">...
----

For the secure version, you would use the following:

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?><mule xmlns="http://www.mulesoft.org/schema/mule/core"       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"       xmlns:spring="http://www.springframework.org/schema/beans"       xmlns:imaps="http://www.mulesoft.org/schema/mule/imaps"       xsi:schemaLocation="       http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-3.0.xsd       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/3.2/mule.xsd       http://www.mulesoft.org/schema/mule/imaps http://www.mulesoft.org/schema/mule/imaps/3.2/mule-imaps.xsd">...
----

Then you need to configure your connector and endpoints as described below.

=== Configuration Example

Say you had a business and wanted to take orders through email attachments. After you receive the email, you want to save the order attachments so they could be picked up by your order fulfillment process. The following Mule configuration checks an email box for emails, and saves the attachments to the local disk, where it can be picked up from a separate fulfillment process:

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?><mule xmlns="http://www.mulesoft.org/schema/mule/core"       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"       xmlns:spring="http://www.springframework.org/schema/beans"       xmlns:imap="http://www.mulesoft.org/schema/mule/imap"       xmlns:vm="http://www.mulesoft.org/schema/mule/vm"       xmlns:file="http://www.mulesoft.org/schema/mule/file"       xmlns:email="http://www.mulesoft.org/schema/mule/email"       xsi:schemaLocation="       http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-3.0.xsd       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/3.2/mule.xsd       http://www.mulesoft.org/schema/mule/file http://www.mulesoft.org/schema/mule/file/3.2/mule-file.xsd       http://www.mulesoft.org/schema/mule/imap http://www.mulesoft.org/schema/mule/imap/3.2/mule-imap.xsd       http://www.mulesoft.org/schema/mule/email http://www.mulesoft.org/schema/mule/email/3.2/mule-email.xsd       http://www.mulesoft.org/schema/mule/vm http://www.mulesoft.org/schema/mule/vm/3.2/mule-vm.xsd">    <imap:connector name="imapConnector"  />    <expression-transformer name="returnAttachments">        <return-argument evaluator="attachments-list" expression="*" optional="false"/> ❶    </expression-transformer>    <file:connector name="fileName">         <file:expression-filename-parser/>     </file:connector>        <model name="test">        <service name="incoming-orders">            <inbound>                <imap:inbound-endpoint user="bob" password="password" host="emailHost"                      port="143" transformer-refs="returnAttachments" disableTransportTransformer="true"/> ❷            </inbound>            <outbound>                <list-message-splitter-router> ❸                    <file:outbound-endpoint path="./received" outputPattern="#[function:datestamp].dat"> ❹                        <expression-transformer>                            <return-argument expression="payload.inputStream" evaluator="groovy" /> ❺                        </expression-transformer>                    </file:outbound-endpoint>                                    </list-message-splitter-router>                            </outbound>        </service>    </model></mule>
----

The built-in transformer is declared ❶ and gets the list of email attachments. This transformer is then applied to the pop3 inbound endpoint defined ❷. Then we define a list list-message-splitter-router ❸ which iterates through all of the email attachments. Next we define a file outbound endpoint which writes the attachment to the './received' directory with a datestamp as the file name ❹. A simple groovy expression ❺ gets the inputStream of the attachment to write the file.

Here is a flow-based version:

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?><mule xmlns="http://www.mulesoft.org/schema/mule/core"       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"       xmlns:spring="http://www.springframework.org/schema/beans"       xmlns:imap="http://www.mulesoft.org/schema/mule/imap"       xmlns:vm="http://www.mulesoft.org/schema/mule/vm"       xmlns:file="http://www.mulesoft.org/schema/mule/file"       xmlns:email="http://www.mulesoft.org/schema/mule/email"       xsi:schemaLocation="       http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-3.0.xsd       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/3.2/mule.xsd       http://www.mulesoft.org/schema/mule/file http://www.mulesoft.org/schema/mule/file/3.2/mule-file.xsd       http://www.mulesoft.org/schema/mule/imap http://www.mulesoft.org/schema/mule/imap/3.2/mule-imap.xsd       http://www.mulesoft.org/schema/mule/email http://www.mulesoft.org/schema/mule/email/3.2/mule-email.xsd       http://www.mulesoft.org/schema/mule/vm http://www.mulesoft.org/schema/mule/vm/3.2/mule-vm.xsd">    <imap:connector name="imapConnector"  />    <expression-transformer name="returnAttachments">        <return-argument evaluator="attachments-list" expression="*" optional="false"/> ❶    </expression-transformer>    <file:connector name="fileName">         <file:expression-filename-parser/>     </file:connector>            <flow name="incoming-orders">            <imap:inbound-endpoint user="bob" password="password" host="emailHost"                      port="143" transformer-refs="returnAttachments" disableTransportTransformer="true"/> ❷            <collection-splitter/>            <file:outbound-endpoint path="./received" outputPattern="#[function:datestamp].dat"> ❹                <expression-transformer>                    <return-argument expression="payload.inputStream" evaluator="groovy" /> ❺                </expression-transformer>            </file:outbound-endpoint>                            </flow></mule>
----

Here is the secure version of the same configuration:

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?><mule xmlns="http://www.mulesoft.org/schema/mule/core"       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"       xmlns:spring="http://www.springframework.org/schema/beans"       xmlns:imaps="http://www.mulesoft.org/schema/mule/imaps"       xmlns:vm="http://www.mulesoft.org/schema/mule/vm"       xmlns:file="http://www.mulesoft.org/schema/mule/file"       xmlns:email="http://www.mulesoft.org/schema/mule/email"       xsi:schemaLocation="       http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-3.0.xsd       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/3.2/mule.xsd       http://www.mulesoft.org/schema/mule/file http://www.mulesoft.org/schema/mule/file/3.2/mule-file.xsd       http://www.mulesoft.org/schema/mule/imaps http://www.mulesoft.org/schema/mule/imaps/3.2/mule-imaps.xsd       http://www.mulesoft.org/schema/mule/email http://www.mulesoft.org/schema/mule/email/3.2/mule-email.xsd       http://www.mulesoft.org/schema/mule/vm http://www.mulesoft.org/schema/mule/vm/3.2/mule-vm.xsd">    <imaps:connector name="imapsConnector"> ❶        <imaps:tls-client path="clientKeystore" storePassword="mulepassword" />         <imaps:tls-trust-store path="greenmail-truststore" storePassword="password" />    </imaps:connector>    <expression-transformer name="returnAttachments">        <return-argument evaluator="attachments-list" expression="*" optional="false"/>  ❷    </expression-transformer>    <file:connector name="fileName">        <file:expression-filename-parser/>    </file:connector>        <model name="test">        <service name="incoming-orders">            <inbound>                <imaps:inbound-endpoint user="bob" password="password" host="mailServer"                       port="110" transformer-refs="returnAttachments" disableTransportTransformer="true"/> ❸            </inbound>            <outbound>                <list-message-splitter-router> ❹                    <file:outbound-endpoint path="./received" outputPattern="#[function:datestamp].dat"> ❺                        <expression-transformer>                            <return-argument expression="payload.inputStream" evaluator="groovy" /> ❻                        </expression-transformer>                    </file:outbound-endpoint>                                    </list-message-splitter-router>                            </outbound>        </service>    </model></mule>
----

The IMAPS connector has tls client and server keystore information ❶. The built-in transformer is declared ❷ and gets the list of email attachments. This transformer is then applied to the inbound endpoint ❸. Then we define a list list-message-splitter-router ❹ which iterates through all of the email attachments. Next we define a file outbound endpoint which writes the attachment to the './received' directory with a datestamp as the file name ❺. A simple groovy expression ❻ gets the inputStream of the attachment to write the file.

== Configuration Reference

=== Connectors

The IMAP connector supports all the link:/documentation-3.2/display/32X/Configuring+a+Transport#ConfiguringaTransport-commonConfig[common connector attributes and properties] and the following additional attributes:

[width="99",cols="10,70,10,10",options="header"]
|===
|Attribute |Description |Default |Required
|backupEnabled |Whether to save copies to the backup folder |False |No
|backupFolder |The folder where messages are moved after they have been read. |  |No
|checkFrequency |Period (ms) between poll connections to the server. |60000 |Yes
|mailboxFolder |The remote folder to check for email. |INBOX |No
|deleteReadMessages |Whether to delete messages from the server when they have been downloaded. If set to false, the messages are set to defaultProcessMessageAction attribute value. |true |No
|moveToFolder |The remote folder to move mail to once it has been read. It is recommended that 'deleteReadMessages' is set to false when this is used.
 This is very useful when working with public email services such as GMail where marking messages for deletion doesn't work. Instead set the @moveToFolder=Gmail/Trash. |  |No
|defaultProcessMessageAction |The action performed if the deleteReadMessages attribute is set to false. Valid values are: ANSWERED, DELETED, DRAFT, FLAGGED, RECENT, SEEN, USER, and NONE |SEEN |No
|===

For the secure version, the following elements are also required:

[width="100",cols="50%,50",options="header"]
|===
|Element |Description
|tls-client a|
Configures the client key store with the following attributes:

* path: The location (which resolves relative to the current classpath and file system, if possible) of the keystore that contains public certificates and private keys for identification
* storePassword: The password used to protect the keystore
* class: The type of keystore used (a Java class name)

|tls-trust-store a|
Configures the trust store. The attributes are:

* path: The location (which resolves relative to the current classpath and file system, if possible) of the trust store that contains public certificates of trusted servers
* storePassword: The password used to protect the trust store

|===

For example:

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?><mule xmlns="http://www.mulesoft.org/schema/mule/core"       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"       xmlns:spring="http://www.springframework.org/schema/beans"       xmlns:imap="http://www.mulesoft.org/schema/mule/imap"       xsi:schemaLocation="       http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-2.5.xsd       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/3.2/mule.xsd       http://www.mulesoft.org/schema/mule/imap http://www.mulesoft.org/schema/mule/imap/3.2/mule-imap.xsd">    <imap:connector name="imapConnector" backupEnabled="true" backupFolder="backup" checkFrequency="90000"                     deleteReadMessages="false" mailboxFolder="INBOX" moveToFolder="PROCESSED"/>...
----

Secure version:

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?><mule xmlns="http://www.mulesoft.org/schema/mule/core"       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"       xmlns:spring="http://www.springframework.org/schema/beans"       xmlns:imaps="http://www.mulesoft.org/schema/mule/imaps"       xsi:schemaLocation="       http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-2.5.xsd       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/3.2/mule.xsd       http://www.mulesoft.org/schema/mule/imaps http://www.mulesoft.org/schema/mule/imaps/3.2/mule-imaps.xsd">    <imaps:connector name="imapsConnector" backupEnabled="true" backupFolder="backup" checkFrequency="90000"                      deleteReadMessages="false" mailboxFolder="INBOX" moveToFolder="PROCESSED"/>      <imaps:tls-client path="clientKeystore" storePassword="mulepassword" />       <imaps:tls-trust-store path="greenmail-truststore" storePassword="password" />     </imaps:connector>...
----

=== Endpoints

IMAP and IMAPS endpoints include details about connecting to an IMAP mailbox. You link:/documentation-3.2/display/32X/Configuring+Endpoints[configure the endpoints] just as you would with any other transport, with the following additional attributes:

* User: the user name of the mailbox owner
* Password: the password of the user
* Host: the name or IP address of the IMAP server, such as www.mulesoft.com, localhost, or 127.0.0.1
* Port: the port number of the IMAP server.

For example:

[source, xml, linenums]
----
<imap:inbound-endpoint user="bob" password="password" host="localhost" port="65433"/>
----

Secure version:

[source, xml, linenums]
----
<imaps:inbound-endpoint user="bob" password="password" host="localhost" port="65433"/>
----

You can also define the endpoints using a URI syntax:

[source, xml, linenums]
----
<inbound-endpoint address="imap://bob:password@localhost:65433"/><inbound-endpoint address="imaps://bob:password@localhost:65433"/>
----

This logs into the `bob` mailbox on `localhost` on port 65433 using password `password`. You can also specify the endpoint settings using a URI, but the above syntax is easier to read.

[source, code, linenums]
----
xslt: Read http://www.mulesoft.org/xslt/mule/schemadoc/3.1/individual-transport-or-module-wiki.xsl error because of: java.io.IOException: Server returned HTTP response code: 401 for URL: http://svn.codehaus.org/mule/branches/mule-3.1.x/tools/schemadocs/src/main/resources/xslt//individual-transport-or-module-wiki.xsl
----

Here is how you define transformers in your Mule configuration file:

[source, xml, linenums]
----
<email:bytes-to-mime-transformer encoding="" ignoreBadInput="" mimeType="" name="" returnClass="" xsi:type=""/><email:email-to-string-transformer encoding="" ignoreBadInput="" mimeType="" name="" returnClass="" xsi:type=""/><email:mime-to-bytes-transformer encoding="" ignoreBadInput="" mimeType="" name="" returnClass="" xsi:type=""/><email:object-to-mime-transformer encoding="" ignoreBadInput="" mimeType="" name="" returnClass="" useInboundAttachments="true" useOutboundAttachments="true"/>{Note}Need to explain attributes somewhere; can we pull them in from xsd?{Note}<email:string-to-email-transformer encoding="" ignoreBadInput="" mimeType="" name="" returnClass="" xsi:type=""/>
----

Each transformer supports all the common transformer attributes and properties:

[source, code, linenums]
----
xslt: Read http://www.mulesource.org/xslt/mule/schemadoc/3.0/single-element-wiki.xsl error because of: java.io.IOException: Server returned HTTP response code: 401 for URL: http://svn.codehaus.org/mule/branches/mule-3.1.x/tools/schemadocs/src/main/resources/xslt//single-element-wiki.xsl
----

The object-to-mime-transformer has the following attributes:

[width="10",cols="33,33,33",options="header"]
|===
|Attribute |Description |Default Value
|useInboundAttachments |Whether to transform inbound attachment in the input message into MIME parts. |true
|useOutboundAttachments |Whether to transform outbound attachment in the input message into MIME parts. |true
|===

To use these transformers, make sure you include the 'email' namespace in your mule configuration.

=== Filters

Filters can be set on an endpoint to filter out any unwanted messages. The Email transport provides a couple of filters that can either be used directly or extended to implement custom filtering rules.

[width="99",cols="50,50",options="header"]
|===
|Filter |Description
|http://www.mulesoft.org/docs/site/current/apidocs/org/mule/providers/email/filters/AbstractMailFilter.html[org.mule.providers.email.filters.AbstractMailFilter] |A base filter implementation that must be extended by any other mail filter.
|http://www.mulesoft.org/docs/site/current/apidocs/org/mule/providers/email/filters/MailSubjectRegExFilter.html[org.mule.providers.email.filters.MailSubjectRegExFilter] |Applies a regular expression to a Mail Message subject.
|===

This is how you define the MailSubjectRegExFilter in your Mule configuration:

[source, xml, linenums]
----
<message-property-filter pattern="to=barney@mule.org"/>
----

The 'pattern' attribute is a regular expression pattern. This is defined as java.util.regex.Pattern.

== Maven module

The email transports are implemented by the mule-transport-email module. You can find the source for the email transport under transports/email.

If you are using maven to build your application, use the following dependency snippet to include the email transport in your project:

[source, xml, linenums]
----
<dependency>  <groupId>org.mule.transports</groupId>  <artifactId>mule-transport-email</artifactId></dependency>
----

= Mule-Maven Dependencies

If you are building Mule ESB from source or including Mule artifacts in your Maven project, it may be necessary to add the 'mule-deps' repository to your Maven configuration. This repository contains third-party binaries which may not be in any other public Maven repository.

To add the 'mule-deps' repository to your Maven project, add the following to your pom.xml:

[source, xml, linenums]
----
<repositories>    <repository>        <id>mule-deps</id>        <name>Mule Dependencies</name>        <url>http://dist.codehaus.org/mule/dependencies/maven2</url>        <snapshots>            <enabled>false</enabled>        </snapshots>    </repository></repositories>
----

= Limitations

The following known limitations affect email transports:

* http://www.mulesoft.org/jira/browse/BL-362[Retry policies do not work with email transports]
* http://www.mulesoft.org/jira/browse/BL-126[Timeouts are not supported in email transports]
* http://www.mulesoft.org/jira/browse/MULE-3662[Can't send same object to different email users]
* http://www.mulesoft.org/jira/browse/MULE-1252[MailSubjectRegExFilter cannot handle mails with attachments]

[TIP]
====
*Escape Your Credentials* +

If you use a URI-style endpoint and you include the user name and password, escape any characters that are illegal for URIs. Only alphabet, numeric, "-", "_", "." and "+" are allowed. For example, if the user name is `user@myco.com`, you should enter it as `user%40myco.com`.
====
